<resources>
    <string name="app_name">IStreamV4</string>

    <string name="action_settings">Change Language</string>
    <string name="dody_rifki_suraya">Dody Rifki Suraya</string>
    <string name="dodyrifkisuraya_gmail_com">dodyrifkisuraya@gmail.com</string>

    <string name="dummyBahasa">Indonesia</string>
    <string name="dummyOverview">Lorem Ipsum is simply dummy text of the printing </string>
    <string name="dummyRilis">2 January 2019</string>
    <string name="dummyRating">(7.5/10) dari 1000 Ratingers</string>
    <string name="dummyJudul">JUDUL</string>

    <string name="overview">Overview :</string>
    <string name="original_language">Original Language :</string>

    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>

    <string name="succes_add">Succes to add Favorite</string>
    <string name="fail_add">Fail to add Favorite</string>
    <string name="movie">Movie</string>
    <string name="tv_show">TV Show</string>
    <string name="favorit_movie">Favorit Movie</string>
    <string name="favorit_tv_show">Favorit Tv Show</string>
    <string name="logo">logo</string>
    <string name="star">star</string>
    <string name="banner">banner</string>
    <string name="add_to_favorite">add_fav</string>
    <string name="unsellect_from_favorite">remove_fav</string>
    <string name="fail_delete">Fail to Delete from Favorite</string>
    <string name="succes_delete">Succes to Delete from Favorite</string>
    <string name="empty_data">Data is Empty</string>
    <string name="desc_mv">Now playing</string>
    <string name="desc_tv">Top Tv Show</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="daily_reminder_every_7_am">Daily reminder every 7 am</string>
    <string name="realise_reminder">Realise reminder</string>
    <string name="reminder_of_films_realesed_every_day">Reminder of films realesed every day</string>
    <string name="daily_on">Daily reminder has On</string>
    <string name="daily_off">Daily reminder has Off</string>
    <string name="realese_on">Realese reminder has On</string>
    <string name="realese_off">Realese reminder has Off</string>
    <string name="change_language">Change Language</string>
    <string name="setting">Setting</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>